# bazel-test

./: BUILD  README.md  WORKSPACE  deps.bzl  go.mod
android/: BUILD
android/src/: HelloWorld.java  IntMultiplier.java
android/test/: IntMultiplierTest.java
backend/: BUILD  go.mod  lib1.go  lib1_test.go  lib2.go  lib2_test.go
client-server-go/: BUILD.bazel  echo_server.go
client-server-go/model/: BUILD.bazel  model.go
client-server-java/: BUILD
client-server-java/src/: EchoClient.java
proto/: BUILD  message.proto
