load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client-server-go_lib",
    srcs = ["echo_server.go"],
    importpath = "github.com/Yapcheekian/bazel-test/client-server-go",
    visibility = ["//visibility:private"],
    deps = [
        "//client-server-go/model",
        "@com_github_google_uuid//:uuid",
    ],
)

go_binary(
    name = "client-server-go",
    embed = [":client-server-go_lib"],
    visibility = ["//visibility:public"],
)
